# madr-fullstack

./: README.md  docker-compose.yaml
backend/: .env-example  Dockerfile  pyproject.toml
backend/scripts/: populate_db.sh
backend/src/: app.py  models.py
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: auth.py  author.py  books.py  supersuser.py  users.py
backend/src/core/: database.py  security.py  settings.py
backend/src/email/: email.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: d5aa1db72bd3_initial_migration.py  dc54fb2e794d_create_tables.py
backend/src/routers/: auth.py  author.py  books.py  users.py
backend/src/schemas/: authors.py  books.py  responses.py  users.py
backend/src/services/: auth_service.py  author_service.py  book_service.py  user_service.py  users_service.py
backend/src/utils/: create_supersuer.py  create_superuser.py  populate_table.py
backend/tests/: conftest.py  test_auth.py  test_book.py  test_security.py  test_users.py
backend/tests/routes/: test_app.py  test_auth.py  test_author.py  test_book.py  test_security.py  test_superuser.py  test_users.py
frontend/: README.md  index.html  layout.excalidraw  package-lock.json  package.json
frontend/src/: App.tsx  theme.ts
frontend/src/api/: apiRoot.ts  authApi.ts  authorsApi.ts  booksApi.ts  rootApi.ts  usersApi.ts
frontend/src/components/: AlertMessage.tsx  AuhtorsTable.tsx  BooksTable.tsx  Dashboard.tsx  Footer.tsx  Header.tsx  LoginPage.tsx  Pagination.tsx
frontend/src/components/ui/: dialog.tsx  pagination.tsx  provider.tsx
frontend/src/dto/: ApiResponseDto.ts  AuthorsDto.ts  BooksDto.ts  SingInDto.ts  TokenResponseDto.ts  UsersDto.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  SingUpPage.tsx  TestPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx  Types.ts
frontend/src/pages/dashboard/components/: Alert.tsx  AlertModal.tsx  AuhtorsTable.tsx  BooksTable.tsx  Pagination.tsx
frontend/src/routes/: AppRouter.tsx  PrivateRoute.tsx
